example_4/y.output

state 0
	$accept: .json $end 

	STRING  shift 3
	NUMBER  shift 4
	TRUE  shift 7
	FALSE  shift 8
	NULL  shift 9
	LBRACE  shift 10
	LBRACKET  shift 11
	.  error

	json  goto 1
	object  goto 5
	array  goto 6
	value  goto 2

state 1
	$accept:  json.$end 

	$end  accept
	.  error


state 2
	json:  value.    (1)

	.  reduce 1 (src line 45)


state 3
	value:  STRING.    (2)

	.  reduce 2 (src line 49)


state 4
	value:  NUMBER.    (3)

	.  reduce 3 (src line 51)


state 5
	value:  object.    (4)

	.  reduce 4 (src line 52)


state 6
	value:  array.    (5)

	.  reduce 5 (src line 53)


state 7
	value:  TRUE.    (6)

	.  reduce 6 (src line 54)


state 8
	value:  FALSE.    (7)

	.  reduce 7 (src line 55)


state 9
	value:  NULL.    (8)

	.  reduce 8 (src line 56)


state 10
	object:  LBRACE.pairs RBRACE 
	object:  LBRACE.RBRACE 

	STRING  shift 15
	RBRACE  shift 13
	.  error

	pair  goto 14
	pairs  goto 12

state 11
	array:  LBRACKET.elements RBRACKET 
	array:  LBRACKET.RBRACKET 

	STRING  shift 3
	NUMBER  shift 4
	TRUE  shift 7
	FALSE  shift 8
	NULL  shift 9
	LBRACE  shift 10
	LBRACKET  shift 11
	RBRACKET  shift 17
	.  error

	object  goto 5
	array  goto 6
	elements  goto 16
	value  goto 18

state 12
	object:  LBRACE pairs.RBRACE 
	pairs:  pairs.COMMA pair 

	RBRACE  shift 19
	COMMA  shift 20
	.  error


state 13
	object:  LBRACE RBRACE.    (10)

	.  reduce 10 (src line 61)


state 14
	pairs:  pair.    (11)

	.  reduce 11 (src line 64)


state 15
	pair:  STRING.COLON value 

	COLON  shift 21
	.  error


state 16
	array:  LBRACKET elements.RBRACKET 
	elements:  elements.COMMA value 

	RBRACKET  shift 22
	COMMA  shift 23
	.  error


state 17
	array:  LBRACKET RBRACKET.    (15)

	.  reduce 15 (src line 81)


state 18
	elements:  value.    (16)

	.  reduce 16 (src line 84)


state 19
	object:  LBRACE pairs RBRACE.    (9)

	.  reduce 9 (src line 59)


state 20
	pairs:  pairs COMMA.pair 

	STRING  shift 15
	.  error

	pair  goto 24

state 21
	pair:  STRING COLON.value 

	STRING  shift 3
	NUMBER  shift 4
	TRUE  shift 7
	FALSE  shift 8
	NULL  shift 9
	LBRACE  shift 10
	LBRACKET  shift 11
	.  error

	object  goto 5
	array  goto 6
	value  goto 25

state 22
	array:  LBRACKET elements RBRACKET.    (14)

	.  reduce 14 (src line 79)


state 23
	elements:  elements COMMA.value 

	STRING  shift 3
	NUMBER  shift 4
	TRUE  shift 7
	FALSE  shift 8
	NULL  shift 9
	LBRACE  shift 10
	LBRACKET  shift 11
	.  error

	object  goto 5
	array  goto 6
	value  goto 26

state 24
	pairs:  pairs COMMA pair.    (12)

	.  reduce 12 (src line 66)


state 25
	pair:  STRING COLON value.    (13)

	.  reduce 13 (src line 75)


state 26
	elements:  elements COMMA value.    (17)

	.  reduce 17 (src line 86)


14 terminals, 8 nonterminals
18 grammar rules, 27/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
57 working sets used
memory: parser 20/240000
15 extra closures
37 shift entries, 1 exceptions
11 goto entries
6 entries saved by goto default
Optimizer space used: output 34/240000
34 table entries, 0 zero
maximum spread: 14, maximum offset: 23
